--- a/package.json
+++ b/package.json
@@ -8,12 +8,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Miennc/is-even-or-odd.git"
+    "url": "https://github.com/Miennc/is-even-or-odd"
   },
   "bugs": {
     "url": "https://github.com/Miennc/is-even-or-odd/issues"
   },
-  "homepage": "https://github.com/Miennc/is-even-or-odd#readme",
   "keywords": [
     "even",
     "odd",
